Alteração do nome de usuário
Só para deixar visualmente mais "agradável" de ler.

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
                 <div class="profile-photo">
                     <img src="img/perfil-instagram.jpeg" alt="foto de perfil">
                 </div>
-                <a href="#" class="instagram-login">Continue como *username*</a>
+                <a href="#" class="instagram-login">Continue como biglasanha</a>
                 <a href="#" class="instagram-logout">Remover conta</a>
             </div>
             <div class="group">
-                <p class="not-account">Não é *username*?</p>
+                <p class="not-account">Não é biglasanha?</p>
                 <p class="not-account">
                     <span class="link-blue">Alternar contas</span>
                     ou
